--- a/css/app/app.html
+++ b/css/app/app.html
@@ -28,6 +28,7 @@
     </div>
     <div id="root" class="arvo">
         <div id="score" class="arvo text-uppercase">Score = 0</div>
+        <div id="time-left"></div>
         <div>
             <div id="rgb" class="arvo"></div>
             <div id="ball_container"> 
@@ -37,8 +38,9 @@
             </div>
         </div>
         <div></div>
-        </div>
-        <script src="app.js"></script>
+    </div>
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="app.js"></script>
         
 </body>
 </html>
